tests/paczka1/fuzzy1/96243376.err
Error in line 11: A874 S862 -2,1
Error in line 19: 2M0Q A874 47,7
Error in line 5: A874 S862 93,3
Error in line 29: A874 S136 49,5
Error in line 6: QTlp A585 266,1
Error in line 33: A874 A874 21,0
